# youbotinterface

youbot_interface/: CMakeLists.txt  README.md  package.xml  robot_interface.launch
youbot_interface/include/: EigenFile.h  RobotCallback.cpp~  callBack.cpp~  callBack.hpp~  youbotCallback.cpp  youbotCallback.hpp
youbot_interface/scripts/: robot_display.py  robot_display.py~
youbot_interface/src/: robotInterface.cpp~  youbotInterface.cpp
